--- a/Assignment.ipynb
+++ b/Assignment.ipynb
@@ -99,6 +99,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "{for num in lst}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Write a Python Program to find the sum of all Even and odd numbers in the given list?\n",
     "sum([num  for num in lst if num % 2 == 0]), sum([num  for num in lst if num % 2 != 0]) "
    ]
