--- a/DATA/Basic Pandas.ipynb
+++ b/DATA/Basic Pandas.ipynb
@@ -895,7 +895,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "trans['amount'].plot."
+   ]
   }
  ],
  "metadata": {
